--- a/public/style.css
+++ b/public/style.css
@@ -5,18 +5,64 @@
   color: black;
   text-decoration: none;
 }
+#root{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+nav{
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  padding: 20px 40px;
+  background-color: rgba(0,0,0,0.1);
+}
+nav a{
+  display: inline-block;
+}
+nav form{
+  display: inline-block;
+}
+.add-member{
+  display: block;
+  margin: 20px auto;
+}
+.add-member a{
+  display: inline-block;
+  padding: 20px;
+  background-color: green;
+  color: white;
+  font-size: 30px;
+}
 .members{
   margin: auto;
   display: flex;
+  flex-wrap: wrap;
   width: 70vw;
-  height: 100vh;
+  height: 50vh;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
 }
 .member{
-  padding: 15px;
+  padding: 15px 30px;
+  margin: 10px;
+  flex: 1;
   background-color: rgba(0,0,0,0.1);
   display: inline-block;
   text-align: center;
+}
+.memberPage{
+  width: 500px;
+  margin: 100px auto;
+}
+.memberPage h2{
+  display: block;
+  margin: 10px;
+}
+.member-form *{
+  display: block;
+  margin: 10px auto;
 }
